##Text encoding: utf-8

2014-01-17  Koop Mast
	* libs/gcu/application.cc: fix build on FreeBSD. [#41256]
	* libs/gcugtk/spectrumdoc.cc: ditto.

2014-01-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cml/cml.cc: fixed CML import.
	* plugins/loaders/ctfiles/plugin.xml.in: add read support.

2014-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* templates/paint/templates.xml.in: fixed guanine structure.

2014-01-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: don'ts set the application active document to NULL
	when destroying an inactive document.
	* libs/gcp/reaction-arrow.cc: add new entries to the contextual menu.
	* libs/gcp/reaction-arrow.h: new private friend class.

2014-01-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: fix contextual menu to always display the
	"destroy reaction" item.

2013-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add a minus sign before reaction products attached
	to an arrow.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcp/reaction-separator.cc: ditto.
	* libs/gcp/reaction-separator.h: ditto.
	* libs/gcp/reaction-substractor.cc: ditto.
	* libs/gcp/reaction-substractor.h: ditto.

2013-12-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: version bump (0.15.1).
	* plugins/paint/templates/templatetool.cc: make adding template work again.

2013-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: remove -DGTK_DISABLE_DEPRECATED from flags.

2013-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/3d/Makefile.am: replaced deprecated INCLUDES directives.
	* docs/help/calc/Makefile.am: ditto.
	* docs/help/crystal/Makefile.am: ditto.
	* docs/help/spectra/Makefile.am: ditto.
	* docs/help/table/Makefile.am: ditto.
	* gnumeric/Makefile.am: ditto.
	* goffice/Makefile.am: ditto.
	* libs/gccv/Makefile.am: ditto.