@@ -272,9 +272,9 @@ char *NP_GetMIMEDescription (void)
 			"chemical/x-jcamp-dx:dx,jdx:JCAMP Spectroscopic Data Exchange Format;"
 			"application/x-gcrystal:gcrystal:Crystalline structure model;"
 			"chemical/x-cif:cif:Crystallographic Information File;"
-			"application/x-gchempaint:gchempaint:2D chemical structures"
+			"application/x-gchempaint:gchempaint:2D chemical structures;"
 			"chemical/x-cdx:cdx:ChemDraw binary CDX format;"
-			"chemical/x-cdxml:cdxml:ChemDraw CDXML format;");
+			"chemical/x-cdxml:cdxml:ChemDraw CDXML format");
 }
 
 /* This is called to initialise the plugin
